# French-like_word_generator

./: .gitignore  CMakeLists.txt  ConfigureVS.cmake  LICENSE.md  README.md
application/: CMakeLists.txt
application/src/: main.c  ngram.c  ngram.h  settings.h
application/src/graph/: graph.c  graph.h  traversal.c  traversal.h
application/src/utils/: map_ptr.c  map_ptr.h  tools.c  tools.h  tree_int.c  tree_int.h
data/example/: graph_ch1.txt  graph_td1_ex4.txt  graph_td1_ex6.txt  graph_tp1.txt
data/word_generator/: 2-grams.txt  3-grams.txt  4-grams.txt  5-grams.txt  6-grams.txt  graph_2-grams.txt  graph_3-grams.txt  graph_4-grams.txt  graph_5-grams.txt
data/word_generator/prof/: 2-grams.txt  graph_2-grams.txt
